--- a/scripts/dev.ipynb
+++ b/scripts/dev.ipynb
@@ -116,23 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "from topografic import Location\n",
     "import geopandas as gpd"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T11:45:50.267940800Z",
-     "start_time": "2023-06-20T11:45:35.206966540Z"
+     "end_time": "2023-06-20T16:04:12.167157200Z",
+     "start_time": "2023-06-20T16:04:11.593892400Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "url = \"https://tubcloud.tu-berlin.de/s/7bpHrAkjMT3ADSr/download/country_shapes.geojson\"\n",
@@ -141,39 +140,57 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T11:46:05.449103628Z",
-     "start_time": "2023-06-20T11:45:50.236938852Z"
+     "end_time": "2023-06-20T16:04:28.374552300Z",
+     "start_time": "2023-06-20T16:04:12.167157200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (topografic.py, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001B[1;36m(most recent call last)\u001B[0m:\n",
+      "\u001B[0m  File \u001B[0;32m~\\anaconda3\\envs\\esm\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3508\u001B[0m in \u001B[0;35mrun_code\u001B[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001B[0m\n",
+      "\u001B[1;36m  Cell \u001B[1;32mIn[3], line 1\u001B[1;36m\n\u001B[1;33m    from topografic import Location\u001B[1;36m\n",
+      "\u001B[1;36m  File \u001B[1;32m~\\PycharmProjects\\offshore_LCOE\\scripts\\topografic.py:30\u001B[1;36m\u001B[0m\n\u001B[1;33m    def is_location_offshore(countries = 1, point = 1) -> bool:\u001B[0m\n\u001B[1;37m                                                               ^\u001B[0m\n\u001B[1;31mIndentationError\u001B[0m\u001B[1;31m:\u001B[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
+    "from topografic import Location\n",
     "loc = Location(x=4, y=56, countries=countries)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T11:46:27.894358096Z",
-     "start_time": "2023-06-20T11:46:27.780667154Z"
+     "end_time": "2023-06-20T16:04:28.391240800Z",
+     "start_time": "2023-06-20T16:04:28.374552300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "loc.get_distance_to_coast()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-20T11:46:33.082791771Z",
-     "start_time": "2023-06-20T11:46:33.011102511Z"
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
